add basic html for number/operator buttons

--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin calculator</title>
+    <title>Odin Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="calculator.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display"></div>
+        <div class="button-container">
+            <div class="numbers">
+                <button class="btn number"> 1 </button>
+                <button class="btn number"> 2 </button>
+                <button class="btn number"> 3 </button>
+                <button class="btn number"> 4 </button>
+                <button class="btn number"> 5 </button>
+                <button class="btn number"> 6 </button>
+                <button class="btn number"> 7 </button>
+                <button class="btn number"> 8 </button>
+                <button class="btn number"> 9 </button>
+                <button class="btn number"> 0 </button>
+                <button class="btn number"> . </button>
+                <button class="btn number"> = </button>
+            </div>
+            <div class="operators">
+                <button class="btn operator"> + </button>
+                <button class="btn operator"> - </button>
+                <button class="btn operator"> * </button>
+                <button class="btn operator"> / </button>
+            </div>
+        </div>
+        <button class="btn clear"> Clear </button>
+    </div>
 </body>
 </html>
