add functionality to have a working display when pressing number buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display"> 0000 </div>
+        <div class="display"></div>
         <div class="button-container">
             <div class="numbers">
                 <button class="btn number"> 1 </button>
