rework how numbers display and numbers are assigned

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display"></div>
+        <div class="display"> 0 </div>
         <div class="button-container">
             <div class="numbers">
                 <button class="btn number"> 1 </button>
@@ -31,8 +31,8 @@
                 <button class="btn operator"> * </button>
                 <button class="btn operator"> / </button>
             </div>
+            <button class="btn clear"> Clear </button>
         </div>
-        <button class="btn clear"> Clear </button>
     </div>
 </body>
 </html>
