add some extra credit features

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 <button class="btn operator"> * </button>
                 <button class="btn operator"> / </button>
             </div>
-            <button class="btn clear"> Clear </button>
+            <div class="actions">
+                <button class="btn backspace"> Back </button>
+                <button class="btn clear"> Clear </button>
+            </div>
         </div>
     </div>
 </body>
